--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,13 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Ignore JetBrains
+.idea/
+
+# Ignore VSCode
+.vscode/
+
+# Ignore Env Variable Files
+.env
+.env.*
